<resources>
    <string name="app_name">P57_News</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="favourite_news">Favourite News.</string>
    <string name="news_app">News App.</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="search_news">Search News.</string>
    <string name="search">Search</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
</resources>